--- a/locales/en/reservation.json
+++ b/locales/en/reservation.json
@@ -99,7 +99,7 @@
       },
       "email": {
         "label": "Email",
-        "value": "info@voilavelo.com"
+        "value": "voilavelo25@gmail.com"
       },
       "phone": {
         "label": "Phone",
