--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -55,6 +55,7 @@
       "line2": "Montreal, QC [Postal Code]"
     },
     "phone": "XXX-XXX-XXXX",
-    "email": "info@voilavelo.ca"
+    "email": "voilavelo25@gmail.com",
+    "serviceArea": "Greater Montreal, Quebec City, Ottawa"
   }
 }
