--- a/locales/fr/common.json
+++ b/locales/fr/common.json
@@ -55,6 +55,7 @@
       "line2": "Montréal, QC [Code postal]"
     },
     "phone": "XXX-XXX-XXXX",
-    "email": "info@voilavelo.ca"
+    "email": "voilavelo25@gmail.com",
+    "serviceArea": "Grand Montréal, Ville de Québec, Ottawa"
   }
 }
