--- a/locales/fr/contact.json
+++ b/locales/fr/contact.json
@@ -12,12 +12,13 @@
     },
     "phone": {
       "title": "Téléphone",
-      "number": "XXX-XXX-XXXX",
+      "number": "(514)515-6811",
+      "number2": "(514)515-6811",
       "hours": "Lun-Ven: 9h00-17h00"
     },
     "email": {
       "title": "Email",
-      "address": "info@voilavelo.ca",
+      "address": "voilavelo25@gmail.com",
       "responseTime": "Réponse dans les 24h"
     },
     "serviceAreas": {
