--- a/locales/en/contact.json
+++ b/locales/en/contact.json
@@ -6,13 +6,13 @@
     "title": "Contact Information",
     "address": {
       "title": "Address",
-      "line1": "[Business Address]",
-      "line2": "Montreal, QC [Postal Code]",
+      "line1": "3846 rue martin Laval QC H7P 4E5",
+      "line2": "Laval, QC H7P 4E5",
       "viewMap": "View on map →"
     },
     "phone": {
       "title": "Phone",
-      "number": "(514)515-6811",
+      "number": "+16479175857",
       "number2": "(514)515-6811",
       "hours": "Mon-Fri: 9:00AM-5:00PM"
     },
