--- a/locales/en/contact.json
+++ b/locales/en/contact.json
@@ -12,8 +12,8 @@
     },
     "phone": {
       "title": "Phone",
-      "number": "+16479175857",
-      "number2": "(514)515-6811",
+      "number": "+1 (647) 917-5857",
+      "number2": "+1 (514) 515-6811",
       "hours": "Mon-Fri: 9:00AM-5:00PM"
     },
     "email": {
