--- a/locales/fr/contact.json
+++ b/locales/fr/contact.json
@@ -12,8 +12,8 @@
     },
     "phone": {
       "title": "Téléphone",
-      "number": "+16479175857",
-      "number2": "(514)515-6811",
+      "number": "+1 (647) 917-5857",
+      "number2": "+1 (514) 515-6811",
       "hours": "Lun-Ven: 9h00-17h00"
     },
     "email": {
