--- a/locales/en/packages.json
+++ b/locales/en/packages.json
@@ -46,7 +46,7 @@
       "heroDescription": "Perfect for birthdays, daycare graduations, or family festivals, this package brings fun, laughter, and delicious smoothies to any celebration!",
       "mainSection": {
         "title": "What's Included?",
-        "description": "This package includes a kid-friendly blender bike, letting participants pedal to create their smoothies—making it a fun and interactive activity for all ages. We can customize this package with your branding, balloons, and personalized decorations!",
+        "description": "This package includes a kid-friendly blender bike, letting participants pedal to create their smoothies, making it a fun and interactive activity for all ages. We can customize this package with your branding, balloons, and personalized decorations!",
         "includes": [
           "1 kid-friendly blender bike (ages 5-10) – they pedal, they blend, they have fun!",
           "Fresh, colorful smoothies – made on the spot with joy and energy",
