--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -47,7 +47,7 @@
     "subscribe": "SUBSCRIBE",
     "ourPartners": "Our Partners",
     "ourMission": "Our Mission",
-    "ourBlog": "Our Blog",
+    "ourBlog": "Our Values",
     "indigenousAcknowledgment": "We acknowledge the Indigenous peoples, traditional guardians of this land. Voice. Treaty. Truth.",
     "copyright": "© Copyright 2025 Voilà Vélo Fruité",
     "address": {
