--- a/locales/en/faq.json
+++ b/locales/en/faq.json
@@ -21,7 +21,7 @@
     {
       "category": "general",
       "question": "What ingredients do you use?",
-      "answer": "We use only fresh fruits, organic vegetables, and natural ingredients. All our products are Canadian."
+      "answer": "We use natural ingredients like frozen fruits, veggies, and other fresh-tasting options."
     },
     {
       "category": "technical",
