--- a/locales/en/how-it-works.json
+++ b/locales/en/how-it-works.json
@@ -62,7 +62,7 @@
       },
       {
         "question": "What ingredients do you use?",
-        "answer": "We use only fresh fruits, organic vegetables, and natural ingredients. We can accommodate food allergies and dietary preferences with advance notice."
+        "answer": "We use natural ingredients like frozen fruits, veggies, and other fresh-tasting options."
       },
       {
         "question": "How many people can use a bike at once?",
