--- a/locales/fr/how-it-works.json
+++ b/locales/fr/how-it-works.json
@@ -62,7 +62,7 @@
       },
       {
         "question": "Quels ingrédients utilisez-vous?",
-        "answer": "Nous utilisons uniquement des fruits frais, des légumes biologiques et des ingrédients naturels. Nous pouvons accommoder les allergies alimentaires et les préférences diététiques avec un préavis."
+        "answer": "Nous utilisons des ingrédients naturels comme des fruits surgelés, des légumes et d'autres options fraîches et savoureuses."
       },
       {
         "question": "Combien de personnes peuvent utiliser un vélo en même temps?",
