--- a/locales/en/packages.json
+++ b/locales/en/packages.json
@@ -1,4 +1,48 @@
 {
+  "hero": {
+    "title": "Transform Your Event with Smoothie Bikes!",
+    "subtitle": "Create unforgettable experiences with our pedal-powered smoothie stations. Fun, healthy, and eco-friendly entertainment for all ages!",
+    "viewPackages": "View packages",
+    "requestQuote": "Request quote"
+  },
+
+  "intro": {
+    "title": "A Unique Experience For Every Occasion",
+    "description1": "Our smoothie bikes are available for rent throughout the region. Whether you're hosting a small family event or a large festival, we have a solution tailored to your needs.",
+    "description2": "All our packages include delivery, setup and takedown, as well as a professional animator to guide your guests through the experience. We also provide all fresh ingredients, cups, and other necessary accessories."
+  },
+
+  "packagesGrid": {
+    "title": "Discover Our Packages",
+    "subtitle": "A unique and memorable experience for all types of events",
+    "seeDetails": "See details",
+    "learnMore": "Learn more"
+  },
+
+  "features": {
+    "title": "Included in All Our Packages",
+    "delivery": "Delivery & Setup",
+    "deliveryDesc": "Complete turnkey service",
+    "animator": "Professional Animator",
+    "animatorDesc": "Experienced guide included",
+    "ingredients": "Fresh Ingredients",
+    "ingredientsDesc": "Quality fruits and vegetables",
+    "equipment": "All Equipment",
+    "equipmentDesc": "Cups, utensils, everything provided"
+  },
+
+  "help": {
+    "title": "Need Help Choosing?",
+    "description": "Our team can help you select the perfect package for your event or create a completely customized solution.",
+    "requestQuote": "Request Quote",
+    "callUs": "Call Us",
+    "testimonial": {
+      "text": "We booked Voilà Vélo Fruité for our corporate day and it was a resounding success! The team was professional and our employees loved the experience.",
+      "author": "Marie Lemieux",
+      "company": "HR Director, XYZ Company"
+    }
+  },
+
   "packages_section": {
     "title": "Our Packages",
     "subtitle": "Find the perfect package for your event",
@@ -11,8 +55,20 @@
       "description": "Festivals, corporate events, fundraisers, or school programs – we have the perfect package for you."
     },
     "intro": {
+      "title": "A Unique Experience For Every Occasion",
       "description1": "Our smoothie bikes are available for rent throughout the region. Whether you're hosting a small family event or a large festival, we have a solution tailored to your needs.",
       "description2": "All our packages include delivery, setup and takedown, as well as a professional animator to guide your guests through the experience. We also provide all fresh ingredients, cups, and other necessary accessories."
+    },
+    "features": {
+      "title": "Included in All Our Packages",
+      "delivery": "Delivery & Setup",
+      "deliveryDesc": "Complete turnkey service",
+      "animator": "Professional Animator",
+      "animatorDesc": "Experienced guide included",
+      "ingredients": "Fresh Ingredients",
+      "ingredientsDesc": "Quality fruits and vegetables",
+      "equipment": "All Equipment",
+      "equipmentDesc": "Cups, utensils, everything provided"
     },
     "packagesGrid": {
       "title": "Discover our packages",
@@ -411,131 +467,131 @@
           "Multigenerational celebrations",
           "Community events focused on families"
         ]
-    }
-  },
-  "laSmoothieParade": {
-    "title": "The Smoothie Parade",
-    "tagline": "A parade of flavours for large events!",
-    "heroTitle": "Maximum Impact for Large Gatherings",
-    "heroDescription": "Our largest standard package – perfect when you need to serve big crowds and create a real spectacle.",
-    "demoSection": {
-      "title": "Smoothie Parade in Action"
+      }
     },
-    "customizationSection": {
-      "title": "Make Your Parade Unforgettable",
-      "description": "Full visual and experiential customisation so your brand shines in front of thousands.",
-      "details": "Custom wheel covers, branded cups, themed decorations, music programming and more — ask us for the full list!"
-    },
-    "mainSection": {
-      "title": "What's Included",
-      "description": "This package features 4+ smoothie bikes, multiple serving stations and a full team of professional animators to keep the energy high for hours.",
-      "includes": [
-        "4+ smoothie bikes",
-        "Multiple serving stations",
-        "Team of professional animators",
-        "Up to 8-hour service duration",
-        "Extensive ingredient variety",
-        "Sound system & music",
-        "Complete event management"
-      ]
-    },
-    "targetSection": {
-      "title": "Perfect For",
-      "description": "Designed for large-scale events that need a headline attraction capable of keeping crowds entertained and engaged for hours.",
-      "perfectFor": [
-        "Brand activations",
-        "Community festivals",
-        "School or university days",
-        "Shopping malls",
-        "Team building & conferences",
-        "Public celebrations"
-      ]
-    },
-    "targetAudience": {
-      "title": "Perfect For",
-      "description": "Ideal for city festivals, corporate gatherings, major fund-raisers and any situation where you need to wow a large audience.",
-      "items": [
-        "Large festivals",
-        "Corporate gatherings",
-        "City events",
-        "Major fund-raisers",
-        "Public celebrations"
-      ]
-    },
-    "options": [
-      {
-        "title": "Standard Parade Setup",
-        "idealFor": "Great for medium-sized festivals and community events.",
+    "laSmoothieParade": {
+      "title": "The Smoothie Parade",
+      "tagline": "A parade of flavours for large events!",
+      "heroTitle": "Maximum Impact for Large Gatherings",
+      "heroDescription": "Our largest standard package – perfect when you need to serve big crowds and create a real spectacle.",
+      "demoSection": {
+        "title": "Smoothie Parade in Action"
+      },
+      "customizationSection": {
+        "title": "Make Your Parade Unforgettable",
+        "description": "Full visual and experiential customisation so your brand shines in front of thousands.",
+        "details": "Custom wheel covers, branded cups, themed decorations, music programming and more — ask us for the full list!"
+      },
+      "mainSection": {
+        "title": "What's Included",
+        "description": "This package features 4+ smoothie bikes, multiple serving stations and a full team of professional animators to keep the energy high for hours.",
         "includes": [
-          "3 smoothie bikes (2 large + 1 child)",
-          "200 fresh-fruit smoothies",
-          "Menu boards",
-          "Setup tables & signage",
-          "Full installation"
+          "4+ smoothie bikes",
+          "Multiple serving stations",
+          "Team of professional animators",
+          "Up to 8-hour service duration",
+          "Extensive ingredient variety",
+          "Sound system & music",
+          "Complete event management"
+        ]
+      },
+      "targetSection": {
+        "title": "Perfect For",
+        "description": "Designed for large-scale events that need a headline attraction capable of keeping crowds entertained and engaged for hours.",
+        "perfectFor": [
+          "Brand activations",
+          "Community festivals",
+          "School or university days",
+          "Shopping malls",
+          "Team building & conferences",
+          "Public celebrations"
+        ]
+      },
+      "targetAudience": {
+        "title": "Perfect For",
+        "description": "Ideal for city festivals, corporate gatherings, major fund-raisers and any situation where you need to wow a large audience.",
+        "items": [
+          "Large festivals",
+          "Corporate gatherings",
+          "City events",
+          "Major fund-raisers",
+          "Public celebrations"
+        ]
+      },
+      "options": [
+        {
+          "title": "Standard Parade Setup",
+          "idealFor": "Great for medium-sized festivals and community events.",
+          "includes": [
+            "3 smoothie bikes (2 large + 1 child)",
+            "200 fresh-fruit smoothies",
+            "Menu boards",
+            "Setup tables & signage",
+            "Full installation"
+          ]
+        }
+      ]
+    },
+    "signature": {
+      "title": "Signature Package",
+      "tagline": "Your vision, our expertise!",
+      "heroTitle": "Customized to Perfection",
+      "heroDescription": "Let us create a completely customized smoothie bike experience tailored to your specific needs and vision.",
+      "mainSection": {
+        "title": "What's Included",
+        "description": "Whether it's a corporate gala, brand activation or private celebration, this fully bespoke package lets you showcase your identity – smoothie-style! Contact us to make your vision a reality.",
+        "includes": [
+          "Flexible number of bikes",
+          "Customised service duration",
+          "Bespoke ingredient menu",
+          "Themed decorations",
+          "Brand integration",
+          "Special effects & features",
+          "Dedicated event planning"
+        ]
+      },
+      "targetSection": {
+        "title": "Perfect For",
+        "description": "This premium package is designed for brands and organisations that demand excellence and want to deliver a truly unique, memorable experience.",
+        "perfectFor": [
+          "Corporate events",
+          "Brand-awareness campaigns",
+          "School festivals",
+          "Community celebrations",
+          "Weddings, anniversaries & private parties"
+        ]
+      },
+      "demoSection": {
+        "title": "Signature Package – Tailored Excellence"
+      },
+      "customizationSection": {
+        "title": "Create the Perfect Signature Experience",
+        "description": "Fully bespoke design so every detail reflects your brand and event goals.",
+        "details": "In-depth consultation, exclusive graphic design and flawless execution for a one-of-a-kind experience."
+      },
+      "options": [
+        {
+          "title": "Fully Custom Signature Package",
+          "idealFor": "Perfect for events that require complete customisation and premium service.",
+          "includes": [
+            "Custom-branded cups",
+            "Double-sided printed wheel covers",
+            "A-frame sandwich boards",
+            "Tabletop decorations in your style",
+            "Premium consultation & concierge service"
+          ]
+        }
+      ],
+      "targetAudience": {
+        "title": "Perfect For",
+        "items": [
+          "Weddings",
+          "VIP events",
+          "Product launches",
+          "Unique celebrations",
+          "Branded experiences"
         ]
       }
-    ]
-  },
-  "signature": {
-    "title": "Signature Package",
-    "tagline": "Your vision, our expertise!",
-    "heroTitle": "Customized to Perfection",
-    "heroDescription": "Let us create a completely customized smoothie bike experience tailored to your specific needs and vision.",
-    "mainSection": {
-      "title": "What's Included",
-      "description": "Whether it's a corporate gala, brand activation or private celebration, this fully bespoke package lets you showcase your identity – smoothie-style! Contact us to make your vision a reality.",
-      "includes": [
-        "Flexible number of bikes",
-        "Customised service duration",
-        "Bespoke ingredient menu",
-        "Themed decorations",
-        "Brand integration",
-        "Special effects & features",
-        "Dedicated event planning"
-      ]
-    },
-    "targetSection": {
-      "title": "Perfect For",
-      "description": "This premium package is designed for brands and organisations that demand excellence and want to deliver a truly unique, memorable experience.",
-      "perfectFor": [
-        "Corporate events",
-        "Brand-awareness campaigns",
-        "School festivals",
-        "Community celebrations",
-        "Weddings, anniversaries & private parties"
-      ]
-    },
-    "demoSection": {
-      "title": "Signature Package – Tailored Excellence"
-    },
-    "customizationSection": {
-      "title": "Create the Perfect Signature Experience",
-      "description": "Fully bespoke design so every detail reflects your brand and event goals.",
-      "details": "In-depth consultation, exclusive graphic design and flawless execution for a one-of-a-kind experience."
-    },
-    "options": [
-      {
-        "title": "Fully Custom Signature Package",
-        "idealFor": "Perfect for events that require complete customisation and premium service.",
-        "includes": [
-          "Custom-branded cups",
-          "Double-sided printed wheel covers",
-          "A-frame sandwich boards",
-          "Tabletop decorations in your style",
-          "Premium consultation & concierge service"
-        ]
-      }
-    ],
-    "targetAudience": {
-      "title": "Perfect For",
-      "items": [
-        "Weddings",
-        "VIP events",
-        "Product launches",
-        "Unique celebrations",
-        "Branded experiences"
-      ]
-    }
     }
   }
-} 
+}
