--- a/locales/fr/common.json
+++ b/locales/fr/common.json
@@ -48,6 +48,7 @@
     "ourPartners": "Nos Partenaires",
     "ourMission": "Notre Mission",
     "ourBlog": "Notre Blogue",
+    "ourValues": "Nos valeurs",
     "indigenousAcknowledgment": "Nous reconnaissons les peuples autochtones, gardiens traditionnels de cette terre. Voix. Traité. Vérité.",
     "copyright": "© Copyright 2025 Voilà Vélo Fruité",
     "address": {
