--- a/locales/fr/faq.json
+++ b/locales/fr/faq.json
@@ -22,7 +22,7 @@
     {
       "category": "general",
       "question": "Quels ingrédients utilisez-vous?",
-      "answer": "Nous utilisons uniquement des fruits frais, des légumes biologiques et des ingrédients naturels. Tous nos produits sont canadiens."
+      "answer": "Nous utilisons des ingrédients naturels comme des fruits surgelés, des légumes et d'autres options fraîches et savoureuses."
     },
     {
       "category": "technical",
